--- a/tracker/style.css
+++ b/tracker/style.css
@@ -27,3 +27,12 @@ button.demo {
   border-radius: 2em;
   cursor: pointer;
 }
+
+/** for map avatars */
+#map img.avatar {
+  border: 2px solid #900 !important;
+  border-radius: 50%;
+  background-size: cover;
+  background-image: url('https://avatar-prod-us-east-2.webexcontent.com/Avtr~V1~1eb65fdf-9643-417f-9974-ad72cae0e10f/V1~9f8af81a-6683-4081-8a22-c22f52ad6df8~78ba7d3098eb4436bc81601b99e0112d~40'
+  );
+}
