--- a/tracker/style.css
+++ b/tracker/style.css
@@ -36,17 +36,28 @@ ul.legend li {
   height: 20px;
 }
 
+.time {
+  position: absolute;
+  top: 2em;
+  width: 10em;
+  left: calc(50% - 5em);
+  background-color: white;
+  color: black;
+  text-align: center;
+  font-size: 1.5em;;
+}
+
 button.demo {
   position: absolute;
   bottom: 2em;
-  left: 2em;
   padding: 1em 2em;
-  background-color: #00aacc;
+  background-color: #000d;
   color: white;
   border: 0;
   border-radius: 2em;
   cursor: pointer;
-  display: none;
+  width: 10em;
+  left: calc(50% - 5em);
 }
 
 img[src*="avatar"]{
